--- a/_config.yml
+++ b/_config.yml
@@ -10,11 +10,11 @@
 locale                   : "en-US"
 title                    : "Ji Yae (Catherine) No"
 title_separator          : "-"
-name                     : &name "Your Name"
+name                     : &name "Ji Yae (Catherine) No"
 description              : &description "personal description"
 url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "academicpages/academicpages.github.io"
+repository               : "jiyaeno/jiyaeno.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
@@ -43,7 +43,7 @@ author:
   #bitbucket        : # Username - Update with your username on the site
   #codepen          : # Username
   #dribbble         : # Username
-  github           : "academicpages"
+  github           : "jiyaeno"
   #kaggle           : # Username  
   #stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
@@ -57,7 +57,7 @@ author:
   #keybase          : # Username
   #instagram        : # Username
   #lastfm           : # Username
-  linkedin         : # Username
+  linkedin          : Catherine (Ji Yae) No
   #mastodon         : # URL
   #medium           : # URL
   #pinterest        : # Username
@@ -120,19 +120,19 @@ yandex_site_verification :
 
 
 # Social Sharing
-twitter:
-  username               : &twitter
-facebook:
-  username               :
-  app_id                 :
-  publisher              :
-og_image                 :  # Open Graph/Twitter default site image
+#twitter:
+ # username               : &twitter
+#facebook:
+ # username               :
+ # app_id                 :
+ # publisher              :
+#og_image                 :  # Open Graph/Twitter default site image
 # For specifying social profiles
 # - https://developers.google.com/structured-data/customize/social-profiles
-social:
-  type                   : # Person or Organization (defaults to Person)
-  name                   : # If the user or organization name differs from the site's name
-  links: # An array of links to social media profiles
+#social:
+ # type                   : # Person or Organization (defaults to Person)
+ # name                   : # If the user or organization name differs from the site's name
+ # links: # An array of links to social media profiles
 
 
 # Analytics
@@ -235,40 +235,40 @@ defaults:
       layout: single
       author_profile: true
   # _teaching
-  - scope:
-      path: ""
-      type: teaching
-    values:
-      layout: single
-      author_profile: true
-      share: true
-      comments: true
+ # - scope:
+   #  path: ""
+   #   type: teaching
+ #   values:
+    #  layout: single
+    #  author_profile: true
+    #  share: true
+    #  comments: true
   # _publications
-  - scope:
-      path: ""
-      type: publications
-    values:
-      layout: single
-      author_profile: true
-      share: true
-      comments: true
+  #- scope:
+    #  path: ""
+   #   type: publications
+  #  values:
+    #  layout: single
+     # author_profile: true
+     # share: true
+     # comments: true
   # _portfolio
-  - scope:
-      path: ""
-      type: portfolio
-    values:
-      layout: single
-      author_profile: true
-      share: true
-      comment: true
+  #- scope:
+   #   path: ""
+   #   type: portfolio
+  # values:
+    # layout: single
+    #  author_profile: true
+    #  share: true
+    #  comment: true
   # _talks
-  - scope:
-      path: ""
-      type: talks
-    values:
-      layout: talk
-      author_profile: true
-      share: true
+  #- scope:
+     # path: ""
+     # type: talks
+   # values:
+      #layout: talk
+      #author_profile: true
+      #share: true
 
 
 # Sass/SCSS
