--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,8 @@ locale                   : "en-US"
 title                    : "Ji Yae (Catherine) No"
 title_separator          : "-"
 name                     : &name "Ji Yae (Catherine) No"
-description              : &description "personal description"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+description              : &description "Fourth Year Physics and Mathematics Major in the University of Chicago"
+url                      : https://jiyaeno.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "jiyaeno/jiyaeno.github.io"
 
@@ -24,7 +24,7 @@ author:
   avatar           : "profile.png"
   name             : "Ji Yae (Catherine) No"
   pronouns         : "she/her"  
-  bio              : "Fourth Year Physics and Mathematics Student in the University of Chicago"
+  bio              : "Fourth Year Physics and Mathematics Major in the University of Chicago"
   location         : "Chicago"
   employer         : "University of Chicago"
   uri              : "https://jiyaeno.github.io"
